--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4><a href="https://alokmsd7.github.io/coffeehouse.github.io/">NewsDekho</a></h4>
+                                <h4>NewsDekho</h4>
                             </div>
                         </div>
                         <!-- ===== Service item End ====== -->
@@ -245,7 +245,7 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4><a href="https://alokmsd7.github.io/furniture-demo/">Furniture demo</a></h4>
+                                <h4><a href="https://shyamkuntal.github.io/Pepperfly/">Furniture demo</a></h4>
                             </div>
                         </div>
                         <!-- ===== Service item End ====== -->
@@ -266,7 +266,7 @@
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4><a href="https://verdant-palmier-c4c21b.netlify.app/">Coffee Shop</a></h4>
+                                <h4><a href="https://shyamkuntal.github.io/Coffee-Shop/">Coffee Shop</a></h4>
                             </div>
                         </div>
                         <!-- ===== Service item End ====== -->
