--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="Resume_Shyam.pdf" download class="btn">Download CV</a>
+                                            <a href="Resume_Shyam2.pdf" download class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
