--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4>NewsDekho</h4>
+                                <h4><a href="https://newsgeek.netlify.app/">NewsGeek</h4>
                             </div>
                         </div>
                         <!-- ===== Service item End ====== -->
